WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20675
When changing one animation in a list, don't reset other animations
https://bugs.webkit.org/show_bug.cgi?id=20675
Summary
When changing one animation in a list, don't reset other animations
Chris Marrin
Reported
2008-09-05 15:19:35 PDT
Today you can have two animations running by having two values in the -webkit-animation-name. If you remove one of those names (by changing -webkit-animation-name to have only one of the names) the removed animation will stop, but the remaining one will reset and start over. It should not affect the running animation.
Attachments
Patch, including LayoutTest file
(15.50 KB, patch)
2008-09-05 15:22 PDT
,
Chris Marrin
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Marrin
Comment 1
2008-09-05 15:22:47 PDT
Created
attachment 23203
[details]
Patch, including LayoutTest file
Dave Hyatt
Comment 2
2008-09-11 15:14:27 PDT
Comment on
attachment 23203
[details]
Patch, including LayoutTest file r=me
Dean Jackson
Comment 3
2008-09-12 14:57:33 PDT
M LayoutTests/ChangeLog A LayoutTests/animations/change-one-anim-expected.txt A LayoutTests/animations/change-one-anim.html M WebCore/ChangeLog M WebCore/page/animation/AnimationBase.cpp M WebCore/page/animation/AnimationController.cpp M WebCore/page/animation/CompositeAnimation.cpp M WebCore/page/animation/ImplicitAnimation.cpp M WebCore/page/animation/KeyframeAnimation.h Committed
r36356
Required a little bit of merging thanks to a clashing patch by mitz, but i think it is ok.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug