WebCore/page/animation/AnimationBase.cpp
@@ -28,7 +28,6 @@
 
 #include "config.h"
 #include "AnimationBase.h"
-
 #include "AnimationController.h"
 #include "CSSPropertyNames.h"
 #include "CString.h"
@@ -276,8 +275,8 @@ private:
     void (RenderStyle::*m_setter)(const Color&);
 };
 
-Vector<PropertyWrapperBase*>* gPropertyWrappers = 0;
-int gPropertyWrapperMap[numCSSProperties];
+static Vector<PropertyWrapperBase*>* gPropertyWrappers = 0;
+static int gPropertyWrapperMap[numCSSProperties];
 
 static void ensurePropertyMap()
 {
@@ -412,7 +411,7 @@ int AnimationBase::getNumProperties()
     ensurePropertyMap();
     return gPropertyWrappers->size();
 }
-    
+
 // Returns true if we need to start animation timers
 bool AnimationBase::blendProperties(int prop, RenderStyle* dst, const RenderStyle* a, const RenderStyle* b, double progress)
 {
