WebCore/page/animation/AnimationController.cpp
@@ -28,7 +28,6 @@
 
 #include "config.h"
 #include "AnimationController.h"
-
 #include "CompositeAnimation.h"
 #include "Frame.h"
 #include "Timer.h"
